--- a/src/app/pages/consultas/create/create.component.html
+++ b/src/app/pages/consultas/create/create.component.html
@@ -328,7 +328,7 @@
 
                             <div>
                                 <label class="col-form-label">
-                                    Retirar lotes
+                                    Retirar lotes <span class="text-secondary">(medicamento)</span>
                                 </label>
                                 <div [formGroup]="formInsumos">
                                     <div class="card shadow-none">
