--- a/src/app/pages/historiales-medicos/create/create.component.html
+++ b/src/app/pages/historiales-medicos/create/create.component.html
@@ -109,7 +109,7 @@
                                                 <select class="form-control text-center" id="estadoCivil" formControlName="estadoCivil">
                                                 <option value="" selected>-- Seleccione una opción --</option>
                                                 <option value="S">Soltero</option>
-                                                <option value="C">Casado por lo civil</option>
+                                                <option value="C">Casado</option>
                                                 <!-- <option>Divorciado legalmente</option>
                                                 <option>Separado legalmente</option>
                                                 <option>Viudo de matrimonio civil</option> -->
