--- a/src/app/pages/historiales-medicos/edit/edit.component.html
+++ b/src/app/pages/historiales-medicos/edit/edit.component.html
@@ -102,11 +102,8 @@
                                             <label>Estado civil</label>
                                             <select class="form-control text-center" id="estadoCivil" formControlName="estadoCivil">
                                             <option value="" selected>-- Seleccione una opción --</option>
-                                            <option>Soltero</option>
-                                            <option>Casado por lo civil</option>
-                                            <option>Divorciado legalmente</option>
-                                            <option>Separado legalmente</option>
-                                            <option>Viudo de matrimonio civil</option>
+                                            <option value="S">Soltero</option>
+                                            <option value="C">Casado</option>
                                             </select>
                                         </div>
                                     </div>
