--- a/src/app/pages/historiales-medicos/show/show.component.html
+++ b/src/app/pages/historiales-medicos/show/show.component.html
@@ -138,7 +138,7 @@
             <h3 class="card-title text-center">Exámenes médicos</h3>
             <button type="submit" class="btn btn-sm btn-secondary float-right" (click)="abrirFormularioArchivo()">
               <i class="fas fa-upload"></i>
-              {{ mostrarFormularioArchivo ? 'Cancelar' : 'Subir archivo' }}
+              {{ mostrarFormularioArchivo ? 'Cancelar' : 'Subir archivos de otros exámenes médicos' }}
             </button>
           </div>
           <div class="card-body">
@@ -255,7 +255,7 @@
             <div *ngIf="!mostrarFormularioArchivo">
               <div>
                 <div>
-                  <button class="btn btn-flat text-left border-0" type="button" data-toggle="collapse" data-target="#examenF" aria-expanded="false" aria-controls="collapseExamenF">
+                  <button class="btn btn-flat text-left border-0" type="button" data-toggle="collapse" data-target="#examenF" aria-expanded="false" aria-controls="collapseExamenF" [class.no-exist]="!historialMedico!.examenes_fisicos?.length">
                     <h5 class="pt-2"><i class="fas  fa-circle btn-option"></i> Exámenes físicos</h5>
                   </button>
                 </div>
@@ -265,7 +265,7 @@
                 </div>
               </div>
               <div>
-                <button class="btn btn-flat text-left border-0" type="button" data-toggle="collapse" data-target="#examenA" aria-expanded="false" aria-controls="collapseExamenA">
+                <button class="btn btn-flat text-left border-0" type="button" data-toggle="collapse" data-target="#examenA" aria-expanded="false" aria-controls="collapseExamenA" [class.no-exist]="!historialMedico!.examenes_antidoping?.length">
                   <h5 class="pt-2"><i class="fas  fa-circle btn-option"></i> Exámenes de antidoping</h5>
                 </button>
                 <div class="collapse" id="examenA">
@@ -273,7 +273,7 @@
                 </div>
               </div>
               <div>
-                <button class="btn btn-flat text-left border-0" type="button" data-toggle="collapse" data-target="#examenE" aria-expanded="false" aria-controls="collapseExamenE">
+                <button class="btn btn-flat text-left border-0" type="button" data-toggle="collapse" data-target="#examenE" aria-expanded="false" aria-controls="collapseExamenE" [class.no-exist]="!historialMedico!.examenes_embarazo?.length">
                   <h5 class="pt-2"><i class="fas  fa-circle btn-option"></i> Exámenes de embarazo</h5>
                 </button>
                 <div class="collapse" id="examenE">
@@ -281,103 +281,105 @@
                 </div>
               </div>
               <div>
-                <button class="btn btn-flat text-left border-0" type="button" data-toggle="collapse" data-target="#examenV" aria-expanded="false" aria-controls="collapseExamenV">
+                <button class="btn btn-flat text-left border-0" type="button" data-toggle="collapse" data-target="#examenV" aria-expanded="false" aria-controls="collapseExamenV" [class.no-exist]="!historialMedico!.examenes_vista?.length">
                   <h5 class="pt-2"><i class="fas  fa-circle btn-option"></i> Exámenes de vista</h5>
                 </button>
                 <div class="collapse" id="examenV">
                   <app-examenes-vista *ngIf="historialMedico !== null" [historialMedico]="historialMedico"></app-examenes-vista>
                 </div>
               </div>
-              <div>
-                <button class="btn btn-flat text-left border-0" type="button" data-toggle="collapse" data-target="#examen" aria-expanded="false" aria-controls="collapseExamen">
-                  <h5 class="pt-2"><i class="fas  fa-circle btn-option"></i> Otros exámenes</h5>
-                </button>
-              
-                <div class="collapse" id="examen">
-                  <div *ngFor="let categoria of historialMedico!.examenesPorCategoria | keyvalue; let i = index">
-                    <div>
-                      <div class="border-bottom mb-2" [id]="'headingAccordionEV' + i">
-                        <h5 class="mb-0">
-                          <button class="btn collapsed btn-none-efects border-0" [attr.data-toggle]="'collapse'" [attr.data-target]="'#collapseExamen' + i" [attr.aria-expanded]="false" [attr.aria-controls]="'collapseExamen' + i">
-                            <h5 class="text-secondary">
-                              <img src="assets/icons/carpeta.svg" alt="Carpeta" width="35px">
-                              {{ categoria.key }}
-                            </h5>
-                          </button>
-                        </h5>
-                      </div>
-                      <div [id]="'collapseExamen' + i" class="collapse" [attr.aria-labelledby]="'headingAccordionExamen' + i" [attr.data-parent]="'#examen'">
-                        <!-- Contenido del colapso -->
-                        <div *ngFor="let examen of categoria.value; let n = index">
-
-                          <h5 class="mb-0 ml-4">
-                            <button class="btn collapsed btn-none-efects border-0" data-toggle="collapse" 
-                            [attr.href]="'#collapseExamenContenido' + i + n" 
-                            role="button" [attr.aria-expanded]="false" [attr.aria-controls]="'collapseExamenContenido' + i + n">
+              <div *ngIf="historialMedico!.examenes?.length">
+                <div>
+                  <button class="btn btn-flat text-left border-0" type="button" data-toggle="collapse" data-target="#examen" aria-expanded="false" aria-controls="collapseExamen">
+                    <h5 class="pt-2"><i class="fas  fa-circle btn-option"></i> Otros exámenes</h5>
+                  </button>
+                
+                  <div class="collapse" id="examen">
+                    <div *ngFor="let categoria of historialMedico!.examenesPorCategoria | keyvalue; let i = index">
+                      <div>
+                        <div class="border-bottom mb-2" [id]="'headingAccordionEV' + i">
+                          <h5 class="mb-0">
+                            <button class="btn collapsed btn-none-efects border-0" [attr.data-toggle]="'collapse'" [attr.data-target]="'#collapseExamen' + i" [attr.aria-expanded]="false" [attr.aria-controls]="'collapseExamen' + i">
                               <h5 class="text-secondary">
-                                <img src="assets/icons/archivosMedico.svg" alt="Carpeta" width="35px">
-                                {{ examen.fecha | date:'dd/MM/yyyy' }}
+                                <img src="assets/icons/carpeta.svg" alt="Carpeta" width="35px">
+                                {{ categoria.key }}
                               </h5>
                             </button>
                           </h5>
-                          
-                          <div [id]="'collapseExamenContenido' + i + n" class="collapse" [attr.aria-labelledby]="'headingAccordionExamenContenido' + i + n" [attr.data-parent]="'#collapseExamen' + i">
-                            <div class="bg-light rounded p-3">
-                              <div class="py-3">
-                                <div class="row">
-                                  <div class="col-12">
-                                    <a class="btn btn-tool btn-sm float-right" (click)="destroyExamen(examen.id)">
-                                      <i class="fas fa-trash text-danger"></i>
-                                    </a>
-                                  </div>
-                                  <div class="py-2 col-12 col-sm-6">
-                                    <div class="d-flex border-bottom py-2">
-                                        <div>
-                                        <b>Tipo</b>
-                                        </div>
-                                        <div class="ml-auto">
-                                        {{examen?.tipo}}
-                                        </div>
+                        </div>
+                        <div [id]="'collapseExamen' + i" class="collapse" [attr.aria-labelledby]="'headingAccordionExamen' + i" [attr.data-parent]="'#examen'">
+                          <!-- Contenido del colapso -->
+                          <div *ngFor="let examen of categoria.value; let n = index">
+  
+                            <h5 class="mb-0 ml-4">
+                              <button class="btn collapsed btn-none-efects border-0" data-toggle="collapse" 
+                              [attr.href]="'#collapseExamenContenido' + i + n" 
+                              role="button" [attr.aria-expanded]="false" [attr.aria-controls]="'collapseExamenContenido' + i + n">
+                                <h5 class="text-secondary">
+                                  <img src="assets/icons/archivosMedico.svg" alt="Carpeta" width="35px">
+                                  {{ examen.fecha | date:'dd/MM/yyyy' }}
+                                </h5>
+                              </button>
+                            </h5>
+                            
+                            <div [id]="'collapseExamenContenido' + i + n" class="collapse" [attr.aria-labelledby]="'headingAccordionExamenContenido' + i + n" [attr.data-parent]="'#collapseExamen' + i">
+                              <div class="bg-light rounded p-3">
+                                <div class="py-3">
+                                  <div class="row">
+                                    <div class="col-12">
+                                      <a class="btn btn-tool btn-sm float-right" (click)="destroyExamen(examen.id)">
+                                        <i class="fas fa-trash text-danger"></i>
+                                      </a>
                                     </div>
-                                  </div>
-              
-                                  <div class="py-2 col-12 col-sm-6">
-                                    <div class="d-flex border-bottom py-2">
-                                        <div>
-                                        <b>Categoria</b>
-                                        </div>
-                                        <div class="ml-auto">
-                                        {{examen?.categoria}}
-                                        </div>
-                                    </div>
-                                  </div>
-              
-                                  <div class="py-2 col-12" *ngIf="examen?.descripcion">
-                                    <div class="d-flex py-2">
-                                        <div>
-                                        <b>Descripción</b>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="border rounded bg-white p-2">
-                                        {{ examen?.descripcion }}
-                                        </div>
-                                    </div>
-                                  </div>
-    
-                                  <div class="py-2 col-12" *ngIf="examen?.archivos">
-                                    <div class="d-flex pt-2">
-                                      <div>
-                                        <b>Archivos</b>
+                                    <div class="py-2 col-12 col-sm-6">
+                                      <div class="d-flex border-bottom py-2">
+                                          <div>
+                                          <b>Tipo</b>
+                                          </div>
+                                          <div class="ml-auto">
+                                          {{examen?.tipo}}
+                                          </div>
                                       </div>
                                     </div>
-                                    <div *ngFor="let archivo of examen.archivos; let i = index" class="d-inline-block m-1">
-                                      <button class="btn btn-info py-3" (click)="abrirArchivo(archivo.url)">
-                                        <img src="assets/icons/archivoMedico.svg" alt="Carpeta" width="35px">
-                                      </button>
+                
+                                    <div class="py-2 col-12 col-sm-6">
+                                      <div class="d-flex border-bottom py-2">
+                                          <div>
+                                          <b>Categoria</b>
+                                          </div>
+                                          <div class="ml-auto">
+                                          {{examen?.categoria}}
+                                          </div>
+                                      </div>
                                     </div>
+                
+                                    <div class="py-2 col-12" *ngIf="examen?.descripcion">
+                                      <div class="d-flex py-2">
+                                          <div>
+                                          <b>Descripción</b>
+                                          </div>
+                                      </div>
+                                      <div>
+                                          <div class="border rounded bg-white p-2">
+                                          {{ examen?.descripcion }}
+                                          </div>
+                                      </div>
+                                    </div>
+      
+                                    <div class="py-2 col-12" *ngIf="examen?.archivos">
+                                      <div class="d-flex pt-2">
+                                        <div>
+                                          <b>Archivos</b>
+                                        </div>
+                                      </div>
+                                      <div *ngFor="let archivo of examen.archivos; let i = index" class="d-inline-block m-1">
+                                        <button class="btn btn-info py-3" (click)="abrirArchivo(archivo.url)">
+                                          <img src="assets/icons/archivoMedico.svg" alt="Carpeta" width="35px">
+                                        </button>
+                                      </div>
+                                    </div>
+      
                                   </div>
-    
                                 </div>
                               </div>
                             </div>
