--- a/src/app/pages/incapacidades/create/create.component.html
+++ b/src/app/pages/incapacidades/create/create.component.html
@@ -8,7 +8,7 @@
                     {{ profesional?.nickname }}
                 </div>
             </div>
-            <form [formGroup]="formIncapacidad" (ngSubmit)="guardar()">
+            <form [formGroup]="formIncapacitacion" (ngSubmit)="guardar()">
                 <div class="border-footer px-3 bg-pink2">
                     <div class="row">
                         <div class="col-12">
@@ -28,38 +28,6 @@
                 </div>
                 <div class="card-body">
                     <div *ngIf="historialMedico?.pacientable">
-                        <div class="border rounded px-2">
-                            <div class="row">
-                                <div class="col-12 col-md-5">
-                                    <div class="form-group">
-                                        <label class="col-form-label">
-                                            Fecha inicial
-                                            <span class="text-danger">*</span>
-                                        </label>
-                                        <input type="date" id="fechaInicial" class="form-control text-center" formControlName="fechaInicial" (input)="obtenerDias()">
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-2">
-                                    <div class="form-group text-center">
-                                        <label class="col-form-label">
-                                            Días
-                                        </label>
-                                        <div>
-                                            {{ dias }}
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-5">
-                                    <div class="form-group">
-                                        <label class="col-form-label">
-                                            Fecha de termino
-                                            <span class="text-danger">*</span>
-                                        </label>
-                                        <input type="date" id="fechaTermino" class="form-control text-center" formControlName="fechaTermino" (input)="obtenerDias()">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                         <div class="row pt-3">
                             <div class="col-12 col-md-6">
                                 <div class="d-flex flex-column align-items-center bg-pink2 h-100 shadow">
@@ -78,87 +46,117 @@
                             <div class="col-12 col-md-6">
                                 <div class="form-group">
                                     <label class="col-form-label">
-                                      Tipo de incapacitación
+                                        Tipo de incidencia
                                       <span class="text-danger">*</span>
                                     </label>
-                                    <select class="form-control" formControlName="tipo">
-                                      <option class="text-center" value="" selected> -- Seleccione una opción -- </option>
-                                      <option>Maternidad</option>
-                                      <option>Enfermedad general</option>
-                                      <option>Licencia de 140 bis</option>
-                                      <option>Riesgo de trabajo ST7</option>
-                                      <option>Enfermedad profesional ST9</option>
+                                    <select class="form-control" formControlName="TipoIncidencia">
+                                        <option *ngFor="let tipoIncidencia of tipoIncidencias" [value]="tipoIncidencia.TipoIncidencia">{{ tipoIncidencia.Nombre }}</option>
                                     </select>
                                 </div>
-                                <div class="form-group" *ngIf="consecuentesOpciones.length">
-                                    <label class="col-form-label">
-                                      Consecuente
-                                      <span class="text-danger">*</span>
-                                    </label>
-                                    <select class="form-control" formControlName="consecuente">
-                                      <option class="text-center" value="" selected> -- Seleccione una opción -- </option>
-                                      <option *ngFor="let opcion of consecuentesOpciones" [value]="opcion">{{ opcion }}</option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="pt-3">
-                            <div *ngIf="formIncapacidad.get('tipo')!.value === 'Riesgo de trabajo ST7' || formIncapacidad.get('tipo')!.value === 'Enfermedad profesional ST9'">
-                                <div class="form-group">
-                                    <label class="col-form-label">
-                                        Calificación del accidente
-                                      <span class="text-danger">*</span>
-                                    </label>
-                                    <select class="form-control" formControlName="calificacionAccidente">
-                                      <option class="text-center" value="" selected> -- Seleccione una opción -- </option>
-                                      <option>Sí de trabajo</option>
-                                      <option>No de trabajo</option>
-                                      <option>Sí de trayecto</option>
-                                      <option>No de trayecto</option>
-                                      <option>Enfermedad Profesional</option>
-                                      <option>Pendiente</option>
-                                    </select>
+                                <div class="row">
+                                    <div class="form-group col-12 col-xl-8">
+                                        <label class="col-form-label">
+                                            Fecha efectiva
+                                            <span class="text-danger">*</span>
+                                        </label>
+                                        <input type="date" id="FechaEfectiva" class="form-control text-center" formControlName="FechaEfectiva">
+                                    </div>
+                                    <div class="form-group col-12 col-xl-4">
+                                        <label class="col-form-label">
+                                            Días que aplica
+                                            <span class="text-danger">*</span>
+                                        </label>
+                                        <input type="text" id="Dias" class="form-control text-center" formControlName="Dias">
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-form-label">
-                                        Causa
-                                      <span class="text-danger">*</span>
-                                    </label>
-                                    <select class="form-control" formControlName="causa">
-                                      <option class="text-center" value="" selected> -- Seleccione una opción -- </option>
-                                      <option>Acto inseguro</option>
-                                      <option>Condición insegura</option>
-                                      <option>Accidente vial</option>
-                                      <option>Pendiente</option>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label>
-                                        Zonas afectadas
+                                        Folio
                                         <span class="text-danger">*</span>
                                     </label>
-                                    <ngx-select
-                                        [items]="zonasAfectadas"
-                                        [multiple]="true"
-                                        placeholder="Seleccione todos los medicamentos asociados al insumo"
-                                        [formControlName]="'zonasAfectadas'"
-                                    ></ngx-select>
-                                  </div>
-                            </div>
-                            <div>
+                                    <input type="text" id="Folio" class="form-control text-center" formControlName="Folio">
+                                </div>
                                 <div class="form-group">
                                     <label class="col-form-label">
                                         Diagnóstico
+                                        <span class="text-danger">*</span>
                                     </label>
                                     <ckeditor [editor]="Editor" [config]="editorConfig" id="diagnostico" formControlName="diagnostico"></ckeditor>
                                 </div>
-                                <div class="form-group">
-                                    <label class="col-form-label">
-                                        Observaciones
-                                    </label>
-                                    <ckeditor [editor]="Editor" [config]="editorConfig" id="observaciones" formControlName="observaciones"></ckeditor>
+                            </div>
+                        </div>
+                        <div class="border rounded mt-3" *ngIf="formIncapacitacion.get('TipoIncidencia')!.value === 'RT'">
+                            <div class="m-2">
+                                <div class="border-bottom">
+                                    <h5 class="py-1 text-center">Datos de incapacidad</h5>
+                                </div>
+                                <div class="row">
+                                    <div class="form-group col-12">
+                                        <label class="col-form-label">
+                                            Tipo de Riesgo
+                                          <span class="text-danger">*</span>
+                                        </label>
+                                        <select class="form-control" formControlName="TipoRiesgo">
+                                            <option *ngFor="let tipoRiesgo of tipoRiesgos" [value]="tipoRiesgo.TipoRiesgo">{{ tipoRiesgo.Nombre }}</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group col-12">
+                                        <label class="col-form-label">
+                                            Secuela
+                                          <span class="text-danger">*</span>
+                                        </label>
+                                        <select class="form-control" formControlName="Secuela">
+                                            <option *ngFor="let secuela of secuelas" [value]="secuela.Secuela">{{ secuela.Nombre }}</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group col-12">
+                                        <label class="col-form-label">
+                                            Control incapacidad
+                                          <span class="text-danger">*</span>
+                                        </label>
+                                        <select class="form-control" formControlName="ControlIncapacidad">
+                                            <option *ngFor="let controlIncapacidad of controlIncapacidades" [value]="controlIncapacidad.ControlIncapacidad">{{ controlIncapacidad.Nombre }}</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>
+                                            Zonas afectadas
+                                            <span class="text-danger">*</span>
+                                        </label>
+                                        <ngx-select
+                                            [items]="zonasAfectadas"
+                                            [multiple]="true"
+                                            placeholder="Seleccione todos los medicamentos asociados al insumo"
+                                            [formControlName]="'zonasAfectadas'"
+                                        ></ngx-select>
+                                    </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="border rounded mt-3" *ngIf="formIncapacitacion.get('TipoIncidencia')!.value === 'PP' ||
+                        formIncapacitacion.get('TipoIncidencia')!.value === 'PV'">
+                            <div class="m-2">
+                                <div class="border-bottom">
+                                    <h5 class="py-1 text-center">Datos del permiso</h5>
+                                </div>
+                                <div class="row">
+                                    <div class="form-group col-12">
+                                        <label class="col-form-label">
+                                            Tipo de permiso
+                                          <span class="text-danger">*</span>
+                                        </label>
+                                        <select class="form-control" formControlName="TipoPermiso">
+                                            <option *ngFor="let tipoPermiso of tipoPermisos" [value]="tipoPermiso.TipoPermiso">{{ tipoPermiso.Nombre }}</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-form-label">
+                                Observaciones
+                            </label>
+                            <ckeditor [editor]="Editor" [config]="editorConfig" id="observaciones" formControlName="observaciones"></ckeditor>
                         </div>
                     </div>
                 </div>
