--- a/src/app/pages/historiales-medicos/show/antecedentes-personales-no-patologicos/antecedentes-personales-no-patologicos.component.html
+++ b/src/app/pages/historiales-medicos/show/antecedentes-personales-no-patologicos/antecedentes-personales-no-patologicos.component.html
@@ -409,7 +409,7 @@
           <div class="py-2 border-bottom">
             <div class="d-flex py-2">
               <div>
-                <b>Tipo Y RH</b>
+                <b>Tipo y RH</b>
               </div>
               <div class="ml-auto">
                 <textarea class="form-control" rows="3" formControlName="tipoYRH"></textarea>
