--- a/src/app/pages/historiales-medicos/show/examenes-fisicos/examenes-fisicos.component.html
+++ b/src/app/pages/historiales-medicos/show/examenes-fisicos/examenes-fisicos.component.html
@@ -434,7 +434,7 @@
                     <div class="py-2 col-12 col-sm-6">
                     <div class="d-flex border-bottom py-2">
                         <div>
-                        <b>toraxicas</b>
+                        <b>Toraxicas</b>
                         </div>
                         <div class="ml-auto">
                         {{examen_fisico?.extremidad?.toraxicas}}
@@ -1247,7 +1247,7 @@
             <div class="py-2 col-12 col-sm-6">
             <div class="d-flex justify-content-between border-bottom py-2">
                 <div>
-                <b>toraxicas</b>
+                <b>Toraxicas</b>
                 </div>
                 <div class="ml-2">
                 <input type="text" class="form-control form-control-sm" formControlName="toraxicas" id="toraxicas">
