--- a/src/app/pages/historiales-medicos/show/show.component.html
+++ b/src/app/pages/historiales-medicos/show/show.component.html
@@ -9,7 +9,7 @@
                 width="150">
               <div class="mt-3 text-center">
                 <h4>
-                  {{historialMedico!.pacientable?.nombre }}
+                  {{ getTextoCapitalizado(historialMedico!.pacientable?.nombre) }}
                 </h4>
                 <p class="text-secondary mb-1">
                   {{historialMedico!.pacientable?.puesto?.nombre }}
