--- a/src/app/pages/consultas/create/create.component.html
+++ b/src/app/pages/consultas/create/create.component.html
@@ -109,7 +109,7 @@
                                       width="150">
                                     <div class="mt-3 text-center">
                                         <h4>
-                                            {{ historialMedico?.pacientable?.nombre }}
+                                            {{ getTextoCapitalizado(historialMedico?.pacientable?.nombre) }}
                                         </h4>
                                         <span class="badge badge-info">
                                             {{consultaForm.get('tipoPaciente')!.value}}
@@ -347,7 +347,7 @@
                                                 placeholder="Select..."
                                                 (select)="getInsumosPorInventario(formInsumos.get('inventario')?.value)">
                                             </ngx-select>
-                                            
+                                            <p *ngIf="inventarios.length == 0" class="text-danger">Sin lotes en sus almacenes</p>
                                         </div>
                                         <div class="form-group" [hidden]="!formInsumos.get('insumosVisible')?.value">
                                             <label class="col-form-label">
