--- a/src/app/pages/historiales-medicos/show/antecedentes-heredofamiliares/antecedentes-heredofamiliares.component.html
+++ b/src/app/pages/historiales-medicos/show/antecedentes-heredofamiliares/antecedentes-heredofamiliares.component.html
@@ -312,7 +312,7 @@
           <div class="py-2 border-bottom">
             <div class="d-flex py-2">
               <div>
-                <b>Hermanos viven</b>
+                <b>Hermanas viven</b>
               </div>
               <div class="ml-auto">
                 <div class="form-check form-check-inline">
