--- a/src/app/pages/incapacidades/show/show.component.html
+++ b/src/app/pages/incapacidades/show/show.component.html
@@ -144,14 +144,14 @@
               <table class="table table-striped table-valign-middle">
                   <thead>
                   <tr class="text-center">
-                      <th>Fecha</th>
+                      <th>Fecha efectiva</th>
                       <th>Importado</th>
                   </tr>
                   </thead>
                   <tbody *ngIf="incapacidad!.nom_incidencias.length > 0; else noIncidencias">
                       <tr class="text-center" *ngFor="let incidencia of incapacidad!.nom_incidencias | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
                           <td>
-                            {{incidencia.Fecha | date:'dd/MM/yyyy' }}
+                            {{incidencia.FechaEfectiva | date:'dd/MM/yyyy' }}
                           </td>
                           <td>{{incidencia.Importado}}</td>
                       </tr>
