--- a/src/app/shared/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/shared/breadcrumbs/breadcrumbs.component.html
@@ -1,4 +1,4 @@
-<section class="content-header">
+<section class="content-header no-select" style="user-select: none;">
     <div class="container-fluid">
       <div class="row mb-2">
         <div class="col-sm-6 order-sm-12">
