--- a/src/app/pages/historiales-medicos/index/index.component.html
+++ b/src/app/pages/historiales-medicos/index/index.component.html
@@ -37,7 +37,7 @@
                     </tr>
                     </thead>
                     <tbody *ngIf="historialesMedicos.length > 0; else noHistoriales">
-                        <tr *ngFor="let historial of historialesMedicos | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
+                        <tr *ngFor="let historial of historialesMedicos">
                             <td>
                                 {{ getTextoCapitalizado(historial.pacientable?.nombre) }}
                             </td>
@@ -77,9 +77,7 @@
                 </table>
             </div>
             <div class="card-footer">
-                <div class="d-flex justify-content-center">
-                    <pagination-controls (pageChange)="paginaActual = $event"></pagination-controls>
-                </div>
+                <app-pagination [url]="'historiales-medicos'"></app-pagination>
             </div>
         </div>
 
