--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,44 +1,57 @@
-<!-- Main Sidebar Container -->
-<aside class="main-sidebar sidebar-light-primary bg-pink levation-4" style="background-image: url('../assets/dist/img/fondoBlanco.png');
-background-repeat: no-repeat;
-object-fit: cover;
-object-position: bottom;">
-    <!-- Brand Logo -->
-    <div class="bg-dark">
-      <a href="index3.html" class="brand-link">
-        <img src="../assets/dist/img/talentoHumano.jpg" alt="AdminLTE Logo" class="brand-image">
-        <span class="brand-text font-weight-light text-white contageBlack-font"><b>Talento Humano</b></span>
-      </a>
+<aside class="main-sidebar sidebar-light-primary bg-pink levation-4">
+  <!-- Brand Logo -->
+  <div class="bg-dark">
+    <a href="index3.html" class="brand-link">
+      <img src="../assets/dist/img/talentoHumano.jpg" alt="AdminLTE Logo" class="brand-image">
+      <span class="brand-text font-weight-light text-white contageBlack-font"><b>Talento Humano</b></span>
+    </a>
+  </div>
+
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <!-- Sidebar user (optional) -->
+    <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+      <div class="image pt-1">
+        <img [src]="image" class="img-circle" alt="User Image">
+      </div>
+      <div class="info pt-2">
+        <a class="d-block">{{ user?.nickname }}</a>
+      </div>
     </div>
 
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <!-- Sidebar user (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image pt-1">
-          <img [src]="image" class="img-circle" alt="User Image">
-        </div>
-        <div class="info pt-2">
-          <a class="d-block">{{ user?.nickname }}</a>
-        </div>
-      </div>
-
-      <!-- Sidebar Menu -->
-      <nav class="mt-2">
-        <ul class="nav nav-pills nav-sidebar nav-child-indent flex-column" data-widget="treeview" role="menu" data-accordion="false">
-          <!-- Add icons to the links using the .nav-icon class
-          with font-awesome or any other icon font library -->
-          <li class="nav-item" *ngFor="let item of menuItems">
-            <a routerLink="{{item.url}}" class="nav-link" style="cursor: pointer;">
-              <img width="35px" class="pr-2" src="{{item.icono}}" alt="{{item.titulo}} icono">
+    <!-- Sidebar Menu -->
+    <nav class="mt-2">
+      <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu">
+        <!-- Add icons to the links using the .nav-icon class
+             with font-awesome or any other icon font library -->
+          <li class="nav-item">
+            <a routerLink="inicio" class="nav-link">
+              <img width="35px" class="pr-2" src="assets/icons/inicio.svg" alt="inicio icono">
               <p>
-                {{item.titulo}}
+                Inicio
               </p>
             </a>
-          </li>
-        </ul>
-      </nav>
-<hr>
+        </li>
+        <li class="nav-item has-treeview" *ngFor="let item of menuItems">
+          <a class="nav-link">
+            <img width="35px" class="pr-2" src="{{item.icono}}" alt="{{item.titulo}} icono">
+            <p>
+              {{item.titulo}}
+              <i class="right fas fa-angle-left"></i>
+            </p>
+          </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item" *ngFor="let submenu of item.submenu">
+              <a [routerLink]="submenu.url" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>{{submenu.titulo}}</p>
+              </a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+    <hr>
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar nav-child-indent flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <li class="nav-item">
@@ -51,8 +64,7 @@ object-position: bottom;">
           </li>
         </ul>
       </nav>
-
-      <!-- /.sidebar-menu -->
-    </div>
-    <!-- /.sidebar -->
-  </aside>
+    <!-- /.sidebar-menu -->
+  </div>
+  <!-- /.sidebar -->
+</aside>
