--- a/src/app/pages/casos/show/show.component.html
+++ b/src/app/pages/casos/show/show.component.html
@@ -123,7 +123,10 @@
                         <a class="nav-link" (click)="mostrarContenido(incapacidad)" [class.active]="incapacidad === incapacidadSeleccionada">{{ i + 1 }}</a>
                       </li>
                     </ul>
-                    <button type="button"  class="btn btn-secondary ml-2" (click)="exportarIncapacidad()"><i class="fas fa-solid fa-file-export"></i></button>
+                    <button type="button"  class="btn btn-dark ml-2" (click)="exportarIncapacidad()"><i class="fas fa-solid fa-file-export"></i></button>
+                    <button (click)="showCaso(incapacidadSeleccionada!.id)" class="btn btn-secondary ml-2">
+                      <i class="fas fa-eye"></i>
+                    </button>
                     <button type="button"  class="btn btn-primary ml-2" data-toggle="modal" data-target="#incapacidadEditModal"><i class="fas fa-edit"></i></button>
                     <button type="button"  class="btn btn-pink ml-2" data-toggle="modal" data-target="#incapacidadCreateModal"><i class="fas fa-plus"></i> Nueva incapacidad</button>
                   </div>       
@@ -203,8 +206,8 @@
                       </ng-container>
                       <ng-template #showSelect>
                         <select class="form-control w-100" formControlName="categoria" name="categoria" id="categoria" (change)="checkForOther()">
-                          <option>Inicial probable riesgo</option>
-                          <option>Subsecuente probable riesgo</option>
+                          <!-- <option>Inicial probable riesgo</option>
+                          <option>Subsecuente probable riesgo</option> -->
                           <option>Riesgo de trabajo ST7</option>
                           <option>Riesgo de trabajo ST7 calificado</option>
                           <option>Enfermedad profesional ST9</option>
